--- a/src/views/home/homeStyle.scss
+++ b/src/views/home/homeStyle.scss
@@ -1,35 +1,22 @@
-.xs-format {
-  width: 100% !important;
-  margin-left: 0 !important;
-}
-
-.sm-format,
-.md-format,
-.lg-format,
-.xl-format {
-  width: 60%;
-  margin-left: 20%;
-}
-
-#homePage {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-
-  .events-list {
-    position: relative;
-    top: 100px;
+#home {
+  .info-box {
+    position: absolute;
+    z-index: 2;
     width: 100%;
-    height: 300px;
-    background-color: rgb(116, 116, 116);
+    text-align: center;
+    background-color: #00000080;
+    padding: 20px;
 
-    .event {
-      position: relative;
-      width: 80%;
-      height: 50px;
-      margin-top: 20px;
-      background-color: rgb(211, 211, 211);
+    .welcome {
+      font-size: x-large;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+      font-style: italic;
+      color: rgba(255, 255, 255, 0.904);
+    }
+    .button-access {
+      margin: 20px;
+      opacity: 0.9;
+      width: 120px;
     }
   }
 }
