--- a/src/views/events/EventsStyle.scss
+++ b/src/views/events/EventsStyle.scss
@@ -11,10 +11,24 @@
   margin-left: 20%;
 }
 
-#events-page {
-  position: absolute;
+#events {
+  position: relative;
   height: 100%;
   width: 100%;
   padding-top: 100px;
   background-color: rgb(255, 255, 255);
+}
+
+.event-dialog {
+  .info-box {
+    background-color: rgb(255, 255, 255);
+    // height: 200px;
+  }
+  .q-box {
+    height: 200px;
+  }
+
+ 
+
+
 }
