--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -6,12 +6,21 @@
     font-weight: 300;
     text-transform: none;
     // box-shadow: 4px, 3px #ffffff4f;
-    text-shadow: 2px 2px 2px #b6b6b665;
+    // text-shadow: 2px 2px 2px #b6b6b665;
 }
 
 .font-text {
     font-family: 'Inter beta',sans-serif;
     color: #303030d5;
+    font-weight: 300;
+    text-transform: none;
+    box-shadow: 1px, 3px #ffffff4f;
+}
+
+
+.font-error {
+    font-family: 'Inter beta',sans-serif;
+    color: #ce3d3dd5;
     font-weight: 300;
     text-transform: none;
     box-shadow: 1px, 3px #ffffff4f;
