--- a/src/views/events/EventsStyle.scss
+++ b/src/views/events/EventsStyle.scss
@@ -17,15 +17,55 @@
   width: 100%;
   padding-top: 100px;
   background-color: rgb(255, 255, 255);
+
+  .tables-box {
+    display: flex;
+    width: 100%;
+    height: 60%;
+
+    .event-table-box {
+      position: relative;
+      width: calc(100% / 2);
+      height: 100%;
+    }
+    .map-box {
+      position: relative;
+      width: calc(100% / 2);
+      height: 100%;
+      background-image: url("http://joomly.net/frontend/web/images/googlemap/map.png");
+    }
+
+    .questionnaire-table-box {
+      position: relative;
+      width: calc(100% / 3);
+      height: 200px;
+    }
+    .question-table-box {
+      position: relative;
+      width: calc(100% / 3);
+      height: 200px;
+    }
+  }
 }
 
 .event-dialog {
-  .info-box {
-    background-color: rgb(255, 255, 255);
-    // height: 200px;
-  }
-  .q-box {
-    height: 200px;
+  .step1-box {
+    text-align: center;
+    display: flex;
+    .info-box {
+      // background-color: rgb(165, 165, 165);
+      width: 250px;
+    }
+    .tables {
+      padding: 20px;
+    
+      // width: ;
+      .questionnaire-table-box {
+        position: relative;
+        // width: 40%;
+        height: 200px;
+      }
+    }
   }
 
   //FOOTER
