--- a/src/views/events/EventsStyle.scss
+++ b/src/views/events/EventsStyle.scss
@@ -16,6 +16,7 @@
   height: 100%;
   width: 100%;
   padding-top: 100px;
+  padding: 20px;
   background-color: rgb(255, 255, 255);
 
   .tables-box {
