--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -25,6 +25,11 @@
     width: 100%;
   }
 
+  .toolbar-title {
+    font-family: "Arial Black", Gadget, sans-serif;
+    color: #bc7b3c;
+  }
+
   .logo {
     cursor: pointer;
     width: 120px;
