--- a/src/pages/Event/Event.scss
+++ b/src/pages/Event/Event.scss
@@ -17,21 +17,19 @@
   width: 100%;
   padding-top: 100px;
   padding: 20px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 
   .tables-box {
-    // display: flex;
+    position: relative;
+    top: 50px;
     width: 100%;
     height: 60%;
 
     .event-table-box {
       position: relative;
-      // width: calc(100% / 2);
-      // height: 100%;
     }
     .map-box {
       position: relative;
-      // width: calc(100% / 2);
       width: 100%;
       height: 100%;
       background-image: url("http://joomly.net/frontend/web/images/googlemap/map.png");
@@ -54,19 +52,15 @@
   .step1-box {
     text-align: center;
     display: flex;
-    // background-color: aliceblue;
 
     .info-box {
-      // background-color: rgb(165, 165, 165);
       width: 250px;
     }
 
     .tables {
       padding: 20px;
-      // background-color: green;
     
       .questionnaire-table-box {
-        // background-color: yellow;
         position: relative;
       }
     }
@@ -77,7 +71,6 @@
     position: relative;
     width: 100%;
     height: 60px;
-    // bottom: 0px;
     padding-right: 20px;
     margin-top: 50px;
 
