--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -63,7 +63,7 @@
   .box-access {
     position: relative;
     max-width: 400px;
-    top: 100px;
+    top: 70px;
     padding: 30px;
     padding-top: 30px;
     margin: auto;
@@ -74,6 +74,7 @@
 
     .title {
       margin: 20px;
+      font-size: 25px !important;
       color: #5d4936;
     }
 
