--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -18,11 +18,13 @@
   padding-right: 5%;
   padding-bottom: 0px;
   padding-left: 5%;
+  background-color: rgb(39, 39, 39);
 
   .v-toolbar__title {
     position: relative;
     font-size: 1.0em;
     width: 100%;
+    margin-left: 30px;
   }
 
   .toolbar-title {
@@ -34,15 +36,16 @@
     cursor: pointer;
     width: 120px;
     height: 25px;
+    margin-left: 40px !important;
   }
 
   .left-menu-btn {
     position: absolute;
     left: -10px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     box-shadow: none;
-    background-color: rgb(255, 255, 255);
+    // background-color: rgb(255, 255, 255);
     .material-icons {
       font-size: 15px;
     }
