--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -20,11 +20,24 @@
   color: #040404;
 }
 
-#homePage {
+#home-page {
   position: absolute;
   height: 100%;
   width: 100%;
   text-align: center;
+  background-color: #5C1349;
+
+  .img-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    opacity: 0.5;
+  }
+
+
+
 
   .fields {
     .v-input__slot ::after {
@@ -38,13 +51,7 @@
     height: 100%;
     // background-color: gray;
 
-    .back-img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0px;
-      left: 0px;
-    }
+
 
     .v-stepper__items {
       height: 100% !important;
