--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -25,7 +25,7 @@
   height: 100%;
   width: 100%;
   text-align: center;
-  background-color: #5C1349;
+  // background-color: #5C1349;
 
   .img-back {
     position: absolute;
@@ -33,7 +33,7 @@
     height: 100%;
     top: 0px;
     left: 0px;
-    opacity: 0.5;
+    // opacity: 0.5;
   }
 
 
@@ -55,10 +55,12 @@
 
     .v-stepper__items {
       height: 100% !important;
+
       .v-stepper__content {
         height: 100% !important;
+
         .v-stepper__wrapper {
-          height: 100% !important;  
+          height: 100% !important;
           // background-image: url('https://drop.ndtv.com/TECH/product_database/images/2152017124957PM_635_nokia_3310.jpeg');
           // background-color: rgb(117, 212, 133);
         }
