--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -3,9 +3,9 @@ $p_light:rgb(167, 167, 167);
 $p_light: rgb(218, 218, 218);
 $p_dark: rgb(15, 15, 15); //'#000'
 
-$secondary:#a5a262;
-$s_light: #c3bf6f;
-$s_dark:#817f4a;
+$secondary:#c27434;
+$s_light: #f09e32;
+$s_dark:#91590f;
 
 $text_on_p: rgb(31, 31, 31); //'#ffffff'
 $text_on_s: rgb(255, 255, 255); //'#ffffff'
@@ -19,10 +19,11 @@ $secondary-light: rgb(167, 167, 167);
 $tertiary-light: rgb(105, 105, 105);
 
 /* details */
-$warm-color: #a5a262;
-$cool-color: #c3bf6f;
+$warm-color: #c2790b;
+$cool-color: #9e5320;
 
 /* shadows */
+$box-shadow: rgb(34, 21, 21);
 $shadow-color: #161616e0;
 $shadow-dark: rgba(0, 0, 0, 0.801);
 $shadow-light: rgba(238, 238, 238, 0.9);
