--- a/src/components/pages/index/banner/banner.scss
+++ b/src/components/pages/index/banner/banner.scss
@@ -3,14 +3,15 @@
 .banner {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 60px);
   background-color: rgb(0, 0, 0);
 
   .banner-img {
-    position: relative;
+    position: absolute;
     height: 100%;
     width: 100%;
     top: 0;
+    opacity: .4;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -54,5 +55,14 @@
       width: 200px;
       height: 16px;
     }
+  }
+
+  .card-about {
+    padding-top: 10vh;
+
+    .img-box {
+      width: auto !important;
+    }
+
   }
 }
